--- a/smarttimesheet-data/src/main/resources/application.properties
+++ b/smarttimesheet-data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DB CONNECTION (unnecessary for h2 db)
 spring.datasource.url=jdbc:mysql://localhost:3306/sts_data
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=sml4b82
 
 
 
@@ -9,8 +9,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
+#DECOMMENT TO GENERATE DDL
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=ddl.sql
 
 spring.data.rest.default-page-size=50
