--- a/smarttimesheet-data/pom.xml
+++ b/smarttimesheet-data/pom.xml
@@ -13,6 +13,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.github.piergiuseppe82.smarttimesheet</groupId>
+			<artifactId>smarttimesheet-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
